# adaptive-health-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  README.zh-CN.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  harness.yml
agents/: __init__.py  llm.py
agents/coach/: __init__.py  agent.py
agents/reflection/: __init__.py  agent.py
analytics/: __init__.py  stats.py
apps/api/: __init__.py  deps.py  main.py  schemas.py
apps/api/routers/: __init__.py  agents.py  logs.py  memory.py  ops.py  profile.py  stats.py  users.py
apps/dashboard/: .env.example  eslint.config.mjs  package.json  pnpm-lock.yaml
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
core/: __init__.py
core/evaluation/: __init__.py  coach_evaluator.py  reflection_evaluator.py  rubric.py
core/memory/: __init__.py  embeddings.py  engine.py
core/workflow/: __init__.py  users.py
database/: __init__.py  orm.py
database/migrations/: env.py
docs/adr/: 0001-tech-stack.md  0002-memory-five-layers.md
docs/architecture/: agents.md  er-diagram.md  memory-engine.md  overview.md
evolution/: __init__.py
evolution/harness/: __init__.py  __main__.py  reflection_runner.py  runner.py  scenarios.py
evolution/rules/: __init__.py  generator.py  optimizer.py  store.py
infra/: api.Dockerfile  docker-compose.yml
models/: __init__.py  domain.py
scripts/: verify_llm.py
tests/: conftest.py  test_agents.py  test_analytics.py  test_api.py  test_domain_models.py  test_embeddings.py  test_evaluation.py  test_harness.py  test_memory_engine.py  test_migrations.py
(+13 files in other folders)
