[project]
name = "adaptive-health-platform"
version = "0.1.0"
description = "Adaptive Health Intelligence Platform — a continuously learning Health Operating System"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "pgvector>=0.3",
    "psycopg[binary]>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]
ignore = ["ANN401"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["database", "models"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
